[package]
name = "io-result-optional"
version = "0.1.3"
authors = ["Rasmus Kaj <kaj@kth.se>"]
description = "Provide an optional() method for io::Result."
documentation = "https://docs.rs/io-result-optional"
repository = "https://github.com/kaj/io-result-optional"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "kaj/io-result-optional" }
maintenance = { status = "deprecated" }

[dependencies]
